# MicHost

./: .gitignore  CMakeLists.txt  MicHost-devices.txt  README.md  package.ps1
Source/: AudioEngine.cpp  AudioEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h  PluginScanning.h  RateMatchedBridge.cpp  RateMatchedBridge.h
